# bashmod

./: .gitignore  CLAUDE.md  README.md  config.example.toml  example-registry.json  pyproject.toml  requirements.txt  setup.py  todo.md
bash_mods/: __init__.py  __main__.py  config.py
bash_mods/core/: __init__.py  conflicts.py  installer.py  parser.py  registry.py
bash_mods/models/: __init__.py
bash_mods/tui/: __init__.py  app.py
bashmod/: __init__.py  __main__.py  config.py
bashmod/core/: __init__.py  conflicts.py  installer.py  parser.py  registry.py
bashmod/models/: __init__.py  module.py
bashmod/tui/: __init__.py  app.py
