[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bashmod"
version = "0.1.0"
description = "TUI package manager for modular bash configurations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "David", email = "david@example.com"}
]
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bashmod = "bashmod.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bashmod*"]
